[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/OpeningScene/OpeningScene.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Peepo.ttf"

[sub_resource type="DynamicFont" id=3]
size = 18
use_mipmaps = true
extra_spacing_bottom = -5
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.278431, 0.27451, 0.301961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Resources/Peepo.ttf"

[sub_resource type="DynamicFont" id=7]
size = 18
extra_spacing_top = -4
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFont" id=9]
size = 18
use_mipmaps = true
use_filter = true
extra_spacing_bottom = -5
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.278431, 0.27451, 0.301961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFont" id=11]
size = 15
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = SubResource( 6 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 384.0
margin_bottom = 648.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paragraph1" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 278.0
margin_bottom = 391.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You are the astronaut chosen for Earth's first FTL interstellar flight."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paragraph2" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 278.0
margin_bottom = 391.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "



Unfortunately, the launch went horribly wrong and you are instead marooned on a remote planet, 100,000 light years away from Earth."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paragraph3" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 278.0
margin_bottom = 391.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "









You can hear someone walking towards you in the distance..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 216.0
margin_top = 584.0
margin_right = 368.0
margin_bottom = 624.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollingSpeed" type="Panel" parent="Panel"]
margin_left = 16.0
margin_top = 472.0
margin_right = 160.0
margin_bottom = 624.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/ScrollingSpeed"]
margin_left = 7.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Dialogue Speed"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slow" type="Button" parent="Panel/ScrollingSpeed"]
margin_left = 12.0
margin_top = 36.0
margin_right = 132.0
margin_bottom = 68.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "Slow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Average" type="Button" parent="Panel/ScrollingSpeed"]
margin_left = 12.0
margin_top = 72.0
margin_right = 132.0
margin_bottom = 104.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
enabled_focus_mode = 0
text = "Average"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fast" type="Button" parent="Panel/ScrollingSpeed"]
margin_left = 12.0
margin_top = 108.0
margin_right = 132.0
margin_bottom = 140.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "Fast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/ScrollingSpeed/Slow" to="." method="_on_speed_settings_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Panel/ScrollingSpeed/Average" to="." method="_on_speed_settings_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Panel/ScrollingSpeed/Fast" to="." method="_on_speed_settings_pressed" binds= [ 2 ]]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
